[tool.poetry]
name = "ogb-lsc-2022"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.10"
numba = "^0.55.2"
pandas = "^1.4.2"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
ogb = "^1.3.3"
click = "^8.1.3"
cogdl = "^0.5.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.2"
jupyter-dash = "^0.4.2"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
